Added wavy line, more updates

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #A1C9DF;
+    /*background-color: #A1C9DF;*/
     margin: 0;
     padding: 0;
-    display: flex;
+    /*display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;*/
     height: 100vh;
-    flex-direction: column;
 }
 .logo {
     width: 100px;
@@ -22,10 +23,16 @@ body {
     background: white;
     padding: 30px;
     border-radius: 20px;
+    border-color: black;
+    border-style: solid;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     width: 80%;
     max-width: 500px;
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 h1 {
     color: #4A7D96;
@@ -48,4 +55,12 @@ p {
 }
 .button:hover {
     background-color: #356074;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    padding: 10px;
+    width: 100%;
 }
