--- a/content/index.css
+++ b/content/index.css
@@ -88,7 +88,7 @@ footer {
 .stats-container {
     grid-column: 2;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-content: center;
     flex-wrap: wrap;
 }
