--- a/content/index.css
+++ b/content/index.css
@@ -88,11 +88,12 @@ footer {
 .stats-container {
     grid-column: 2;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     justify-content: center;
     flex-wrap: wrap;
 }
 .stat-box {
+    padding-top: 10px;
     min-width: 150px;
 }
 .stat-number {
@@ -135,7 +136,7 @@ footer {
 
    .stats-container {
       grid-template-rows: 1fr 1fr 1fr;
-      grid-template-columns: 1fr;
+      grid-template-columns: 1fr 1fr;
    }
 
    #chatbot-box {
